# eevixplayer

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/eevix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DLNAMediaRender.cpp  YoghurtMediaRender.cpp
app/src/main/cpp/cogs/: CMakeLists.txt  README.md
app/src/main/cpp/cogs/include/: Condition.h  KeyedData.h  Log.h  Mutex.h  Queue.h  Thread.h
app/src/main/cpp/cogs/src/: KeyedData.cpp  Thread.cpp
app/src/main/cpp/cogs/tests/: CMakeLists.txt  test.cpp  threadtest.cpp
app/src/main/cpp/jni/include/: AndroidBundle.h
app/src/main/cpp/jni/src/: AndroidBundle.cpp
app/src/main/cpp/libs/libplatinum/: CMakeLists.txt
app/src/main/java/com/eevix/: DLNAMediaRender.java  MainActivity.java  MediaControllerBar.java  MediaRender.java  MessageReply.java  PlaybackActivity.java  PlaybackController.java
app/src/main/res/layout/: activity_main.xml  activity_playback.xml  media_controller_bar.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/eevix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
